--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
     <script src="https://telegram.org/js/telegram-web-app.js?56"></script>
-    <title>Vite + React + TS</title>
+    <title>TimeSlots</title>
   </head>
   <body>
     <div id="root"></div>
